--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "register-service-worker": "^1.5.2",
+    "axios": "^0.18.0",
+    "localforage": "^1.7.3",
+    "material-design-icons-iconfont": "^4.0.3",
     "vue": "^2.5.21",
+    "vuetify": "^1.3.15",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.2",
     "@vue/cli-plugin-eslint": "^3.2.2",
-    "@vue/cli-plugin-pwa": "^3.2.2",
     "@vue/cli-plugin-unit-jest": "^3.2.2",
     "@vue/cli-service": "^3.2.2",
     "@vue/eslint-config-airbnb": "^4.0.0",
@@ -24,10 +26,16 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "css-loader": "^2.1.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
+    "prettier-eslint": "^8.8.2",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.21"
+    "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "vue-template-compiler": "^2.5.21",
+    "vuetify-loader": "^1.0.8"
   }
 }
