--- a/package.json
+++ b/package.json
@@ -11,34 +11,36 @@
   "dependencies": {
     "axios": "^0.19.2",
     "hue-hacking-node": "^1.6.1",
-    "localforage": "^1.7.3",
+    "localforage": "^1.9.0",
+    "lodash": "^4.17.20",
     "material-design-icons-iconfont": "^5.0.1",
-    "vue": "^2.6.11",
-    "vuetify": "^2.2.9",
-    "vuex": "^3.1.2"
+    "vue": "^2.6.12",
+    "vuetify": "^2.3.21",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.2",
-    "@vue/cli-plugin-eslint": "^4.1.2",
-    "@vue/cli-plugin-unit-jest": "^4.1.2",
-    "@vue/cli-service": "^4.1.2",
-    "@vue/eslint-config-airbnb": "^5.0.2",
-    "@vue/test-utils": "^1.0.0-beta.31",
+    "@types/lodash": "^4.14.165",
+    "@vue/cli-plugin-babel": "^4.5.9",
+    "@vue/cli-plugin-eslint": "^4.5.9",
+    "@vue/cli-plugin-unit-jest": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
+    "@vue/eslint-config-airbnb": "^5.3.0",
+    "@vue/test-utils": "^1.1.2",
     "babel-core": "6.26.3",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^25.1.0",
-    "css-loader": "^3.4.2",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.5.1",
+    "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.1.2",
-    "node-sass": "^4.13.1",
-    "prettier-eslint": "^9.0.1",
-    "sass": "^1.25.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^5.0.0",
+    "prettier-eslint": "^9.0.2",
+    "sass": "^1.30.0",
     "sass-loader": "8.0.2",
-    "style-loader": "^1.1.3",
-    "stylus": "^0.54.7",
+    "style-loader": "^1.3.0",
+    "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
-    "vue-cli-plugin-vuetify": "^2.0.4",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.4.3"
+    "vue-cli-plugin-vuetify": "^2.0.8",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.6.0"
   }
 }
